[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/gui.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/cube.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/unit.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/cancel.png" type="Texture" id=4]

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1248.0
margin_bottom = 688.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1248.0
margin_bottom = 32.0

[node name="LocalizationOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 41.0
margin_bottom = 32.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 45.0
margin_right = 108.0
margin_bottom = 32.0

[node name="GreetLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 63.0
margin_bottom = 14.0
text = "tr('GREET')"

[node name="AskLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 63.0
margin_bottom = 32.0
text = "tr('ASK')"

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 112.0
margin_right = 1220.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 1224.0
margin_right = 1248.0
margin_bottom = 32.0

[node name="OverGUILabel" type="Label" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
margin_top = 9.0
margin_right = 24.0
margin_bottom = 23.0
text = "123"

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 1248.0
margin_bottom = 620.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Spawner" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 624.0
margin_right = 1248.0
margin_bottom = 688.0

[node name="SpawnCube" type="TextureButton" parent="VBoxContainer/Spawner"]
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
stretch_mode = 2

[node name="SpawnWalker" type="TextureButton" parent="VBoxContainer/Spawner"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
stretch_mode = 2

[node name="CancelSpawn" type="TextureButton" parent="VBoxContainer/Spawner"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )
stretch_mode = 2

[node name="SpawnLabel" type="Label" parent="VBoxContainer/Spawner"]
margin_left = 204.0
margin_top = 25.0
margin_right = 204.0
margin_bottom = 39.0
[connection signal="mouse_entered" from="." to="." method="_on_gui_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_gui_mouse_exited"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/LocalizationOptionButton" to="." method="_set_localization"]
[connection signal="button_up" from="VBoxContainer/Spawner/SpawnCube" to="." method="_on_spawn_select_type" binds= [ "cube" ]]
[connection signal="button_up" from="VBoxContainer/Spawner/SpawnWalker" to="." method="_on_spawn_select_type" binds= [ "walker" ]]
[connection signal="button_up" from="VBoxContainer/Spawner/CancelSpawn" to="." method="_on_spawn_cancel"]
